--- a/futurechain.html
+++ b/futurechain.html
@@ -12,7 +12,7 @@
 <body class="bg-white text-dark">
     <div class="container my-5 p-4 border rounded shadow-sm">
 
-        <h2 class="pb-2 border-bottom">What is Futures Chain?</h2>
+        <h2 class="pb-2 border-bottom">What is Future Chain?</h2>
 
         <p>
             A Futures Chain displays real-time data of index or stock futures contracts across different expiries.
