Fix link to future chain HTML file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
   <ul>
     <li>
-      <a href="write-up-project
-/futurechain.htm">
+      <a href="future chain/futurechain.html">
         future chain 
       </a>
     </li>
