--- a/futurechain.html
+++ b/futurechain.html
@@ -20,7 +20,7 @@
             reduced, or rolled over, and what the market expects from the underlying index.
         </p>
 
-        <h3 class="pb-2 border-bottom">Why Do We Use the Futures Chain?</h3>
+        <h3 class="pb-2 border-bottom">Why Do We Use the Future Chain?</h3>
         <p>
             Futures data reflects the activity of institutional and professional traders.
             By analyzing price, open interest, and volume together, traders can identify
@@ -31,7 +31,7 @@
             <img src="C:\Users\hp\Desktop\futurechain\images\ftc.jpg" class="img-fluid img-thumbnail" alt="error loading image">
         </div>
 
-        <h3 class="pb-2 border-bottom">Breaking Down the Futures Data</h3>
+        <h3 class="pb-2 border-bottom">Breaking Down the Future Data</h3>
         <p>
             The Futures Chain shows Nifty 50 index futures data for multiple expiries
             (Near, Next, and Far month) with continuous updates during market hours.
@@ -41,7 +41,7 @@
 
         <h4 class="pb-2">Expiry</h4>
         <p>
-            The date on which the futures contract expires. Traders typically focus more on
+            The date on which the future contract expires. Traders typically focus more on
             the near-month expiry due to higher liquidity.
         </p>
 
