--- a/heatmap/heat map.html
+++ b/heatmap/heat map.html
@@ -37,7 +37,7 @@
             </p>
 
             <div class="text-center">
-                <img src="C:\Users\hp\Desktop\futurechain\heatmap.html\images\htm.png"
+                <img src="C:\Users\hp\Desktop\write-up-project\heatmap\images\htm.png"
                      class="img-fluid rounded border"
                      alt="Future Built-Up Heatmap">
             </div>
@@ -57,7 +57,7 @@
                     <strong>Expiry:</strong> JAN-2026 – Selected futures contract
                 </li>
                 <li class="list-group-item">
-                    <strong>Days:</strong> 7 Days – Built-up calculated for last 7 sessions
+                    <strong>Days:</strong> 30  Days – Built-up calculated for last 30 sessions
                 </li>
                 <li class="list-group-item">
                     <strong>Symbol Reading:</strong> ALL – Shows all position types
@@ -206,6 +206,141 @@
     </div>
 
 </div>
+<!-- Purpose of Built-Up Heatmap Analysis -->
+<div class="card shadow-sm mb-4">
+    <div class="card-body">
+        <h4 class="fw-semibold">Purpose of Built-Up Heatmap Analysis</h4>
+
+        <p class="text-muted">
+            The primary purpose of a <strong>Built-Up Heatmap</strong> is to
+            decode <strong>smart money behavior</strong> in the futures market
+            by combining <strong>price action</strong> with
+            <strong>open interest dynamics</strong>.
+        </p>
+
+        <ul>
+            <li>
+                Identify whether <strong>new positions are being created</strong>
+                or <strong>existing positions are being exited</strong>
+            </li>
+            <li>
+                Distinguish between <strong>trend continuation</strong> and
+                <strong>false price moves</strong>
+            </li>
+            <li>
+                Spot <strong>institutional accumulation or distribution</strong>
+                over multiple sessions
+            </li>
+            <li>
+                Anticipate <strong>trend reversals</strong> using
+                Long Unwinding and Short Covering patterns
+            </li>
+            <li>
+                Improve <strong>trade timing</strong> for intraday,
+                swing, and positional strategies
+            </li>
+        </ul>
+
+        <div class="alert alert-light border mt-3">
+            <strong>In simple words:</strong><br>
+            Built-up heatmap analysis helps traders understand
+            <em>who is in control — buyers or sellers — and whether they are
+            entering, holding, or exiting their positions</em>.
+        </div>
+    </div>
+</div>
+<!-- Why Built-Up Heatmap Is Important -->
+<div class="card shadow-sm mb-4">
+    <div class="card-body">
+        <h4 class="fw-semibold">Why Built-Up Heatmap Is Important to Us</h4>
+
+        <p class="text-muted">
+            In real market conditions, <strong>price alone is often misleading</strong>.
+            The Built-Up Heatmap becomes important because it reveals the
+            <strong>strength, intention, and sustainability</strong> behind every price move.
+        </p>
+
+        <ul>
+            <li>
+                Helps avoid <strong>false breakouts</strong> by confirming
+                price movement with Open Interest
+            </li>
+            <li>
+                Shows whether a move is driven by
+                <strong>fresh participation</strong> or just <strong>short-term covering</strong>
+            </li>
+            <li>
+                Allows traders to <strong>follow smart money</strong>
+                instead of reacting emotionally
+            </li>
+            <li>
+                Improves <strong>risk management</strong> by identifying
+                weak trends and exit signals early
+            </li>
+            <li>
+                Useful across <strong>all timeframes</strong> —
+                intraday, swing, and positional trading
+            </li>
+        </ul>
+
+        <div class="alert alert-warning mt-3">
+            <strong>Key Takeaway:</strong><br>
+            The Built-Up Heatmap is important because it converts
+            <em>raw futures data into actionable insight</em>,
+            helping traders make <strong>informed, confident,
+            and disciplined decisions</strong>.
+        </div>
+    </div>
+</div>
+<!-- Why Built-Up Heatmap Analysis Is Important to Future Chain -->
+<div class="card shadow-sm mb-4">
+    <div class="card-body">
+        <h4 class="fw-semibold">
+            Why Built-Up Heatmap Analysis Is Important to Future Chain
+        </h4>
+
+        <p class="text-muted">
+            The <strong>Future Chain</strong> contains detailed data such as
+            <strong>Open Interest (OI), OI change, volume, and price</strong>.
+            Built-Up Heatmap analysis is important because it
+            <strong>simplifies this complex data</strong> into an easy-to-read
+            visual format that highlights trader positioning and sentiment.
+        </p>
+
+        <ul>
+            <li>
+                Converts raw future chain numbers into
+                <strong>clear bullish or bearish signals</strong>
+            </li>
+            <li>
+                Helps track <strong>position buildup across multiple sessions</strong>
+                instead of relying on single-day data
+            </li>
+            <li>
+                Reveals whether <strong>OI changes are supporting price movement</strong>
+                or contradicting it
+            </li>
+            <li>
+                Assists in identifying <strong>strong support and resistance zones</strong>
+                created by heavy position buildup
+            </li>
+            <li>
+                Makes it easier to compare <strong>multiple stocks or contracts</strong>
+                at the same time
+            </li>
+        </ul>*
+
+        <div class="alert alert-success mt-3">
+            <strong>Conclusion:</strong><br>
+            Built-Up Heatmap analysis is essential to the Future Chain because
+            it transforms <em>data overload</em> into
+            <strong>actionable market intelligence</strong>,
+            enabling traders to read market structure, conviction,
+            and trend quality with clarity.
+        </div>
+    </div>
+</div>
+
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
