--- a/heatmap/heat map.html
+++ b/heatmap/heat map.html
@@ -79,8 +79,13 @@
             <div class="d-flex flex-wrap gap-2 mb-3">
                 <span class="badge bg-success">L – Long-Buildup</span>
                 <span class="badge bg-danger">S – Short Buildup</span>
-                <span class="badge bg-info text-dark">SC – Short Covering</span>
-                <span class="badge bg-warning text-dark">LU – Long Unwinding</span>
+                <span class="badge bg-success-subtle text-success-emphasis">
+                    SC – Short Covering
+                </span>
+                <span class="badge bg-danger-subtle text-danger-emphasis">
+                    LU – Long Unwinding
+                </span>
+
             </div>
 
             <ul>
